# optata

./: .gitignore  01-concept-v1.md  02-tech-spec.md  03-fable5-prompts.md  04-obsidian-wishlist-v1.md  HANDOFF-stage4.md  README.md
backend/: .env.example  alembic.ini  make_fixtures.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 5ad10ff4938f_init_schema.py  607e6c76464f_reservation_snapshots.py  9ee2d183ae85_refresh_token_replaced_by.py  c5ea05a99ba6_reservation_tombstone_on_item_delete.py
backend/app/: config.py  db.py  deps.py  emails.py  images.py  logging_config.py  main.py  models.py  rate_limit.py  schemas.py  security.py  storage.py
backend/app/routers/: auth.py  items.py  reservations.py  users.py
backend/tests/: conftest.py  helpers.py  test_auth.py  test_items.py  test_password_reset.py  test_rate_limit.py  test_refresh_grace.py  test_reservations.py  test_serialization.py  test_views.py
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/api/: client.test.ts  client.ts  types.test.ts  types.ts
frontend/src/auth/: AuthContext.test.tsx  AuthContext.tsx
frontend/src/components/: AppBar.tsx  ServerWakingBanner.tsx  Wordmark.tsx
frontend/src/lib/: color.test.ts  color.ts  shuffle.test.ts  shuffle.ts  views.test.ts  views.ts
frontend/src/routes/: AuthShell.tsx  ForgotPassword.tsx  Landing.tsx  Login.tsx  NotFound.tsx  Placeholder.tsx  Profile.tsx  Register.tsx  Reservations.tsx  ResetPassword.tsx  Search.tsx  (+1 more)
(+19 files in other folders)
