[project]
name = "wishlist-backend"
version = "0.1.0"
description = "Wishlist API — FastAPI + SQLAlchemy 2.0 (async) + Alembic"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "structlog>=24.4",
    "passlib[argon2]>=1.7.4",
    "pyjwt>=2.13.0",
    "slowapi>=0.1.10",
    "email-validator>=2.3.0",
    "httpx>=0.28.1",
    "pillow>=12.3.0",
    "python-multipart>=0.0.32",
]

[dependency-groups]
dev = [
    "piexif>=1.1.3",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
